# next-fastapi

./: .gitignore  Readme.md  docker-compose.yml
backend/: dockerfile  main.py  pyproject.toml
backend-gin/: main.go
backend/app/: crud.py  models.py
backend/app/core/: client.py  db.py  main.py  route.py
backend/app/core/routers/: user.py  utils.py
backend/app/utils/: chat.py  config.py  deps.py  security.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/config/: api.ts
frontend/src/lib/: api.ts
